kuma/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress-kuma
  namespace: kuma-demo
  annotations:
    kubernetes.io/ingress.class: kong
    # konghq.com/strip-path: 'true'
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: demo-app
            port:
              number: 5000
